--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiyim Ulgurji Savdo Tizimi</title>
+    <title>Clothdeal</title>
     <link rel="stylesheet" href="/static/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -35,7 +35,7 @@
             <!-- Header -->
             <header class="header">
                 <div class="header-content">
-                    <h1><i class="fas fa-tshirt"></i> Kiyim Ulgurji Savdo Tizimi</h1>
+                    <h1><i class="fas fa-tshirt"></i>Clothdeal</h1>
                     <div class="user-info">
                         <span id="currentUser"></span>
                         <button id="logoutBtn" class="btn btn-secondary">
