--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
             <!-- Header -->
             <header class="header">
                 <div class="header-content">
-                    <h1><i class="fas fa-tshirt"></i>Clothdeal</h1>
+                    <h1><i class="fas fa-tshirt"></i> Kiyim Ulgurji Savdo Tizimi</h1>
                     <div class="user-info">
                         <span id="currentUser"></span>
                         <button id="logoutBtn" class="btn btn-secondary">
